# algo-2012

./: .gitignore
pq1/: CMakeLists.txt  build.sh
pq1/src/: CMakeLists.txt  main.c  tests.c
pq1/tests/: CMakeLists.txt  check_pq.c
pq2/: CMakeLists.txt  build.sh
pq2/src/: CMakeLists.txt  main.c  tests.c
pq2/tests/: CMakeLists.txt  check_pq.c
